# interviews

./: README.md  pyproject.toml
Rubbles/Pandas/: pandas_tasks.ipynb
algoritmhs/: README.md
logical_tasks/: README.md
machine_learning/: README.md
others/Rubbles/: INFO.yaml
others/Rubbles/Pyspark/: pyspark.ipynb
python/: README.md
sql_pandas_spark/: README.md
statistic/: README.md
