[tool.poetry]
name = "interviews"
version = "0.1.0"
description = "All task and questions from companies"
authors = ["Lisstrange <nik.lis@bk.ru>"]

[tool.poetry.dependencies]
python = "3.9"
notebook = "^6.4.5"
jupyter = "^1.0.0"
pandas = "^1.3.4"
numpy = "^1.21.3"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
